codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__connector_scope_invalidation.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 4365
expression: "format!(\"Before account change:\\n{before}\\n\\nAfter account change:\\n{after}\")"
---
Before account change:
  Apps
  Use $ to insert an installed app into your prompt.
  Installed 1 of 1 available apps.

  Type to search apps

› Previous Account App  Installed · App link unavailable

  enter select · esc back

After account change:
▌
▌ Ask Codex to do anything
▌
  GPT-5.6-Sol default · /tmp/project
